--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Docker Build & Push Action",
   "main": "src/index.js",
   "scripts": {
+    "build": "ncc build src/main.js",
+    "precommit": "npm run build && git add dist/",
     "lint": "eslint 'src/**.js' 'tests/**.js' --fix",
     "test": "eslint 'src/**.js' 'tests/**.js' && jest --coverage",
-    "build": "ncc build src/main.js",
-    "precommit": "npm run build && git add dist/"
+    "test:watch": "npm run test -- --watchAll"
   },
   "repository": {
     "type": "git",
