add buildArgs paramater

--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
     description: 'Location of Dockerfile, if not Dockerfile in root directory'
     required: false
     default: 'Dockerfile'
+  buildArgs:
+    description: 'Docker build arguments in format KEY=VALUE,KEY=VALUE'
+    required: false
   username:
     description: 'Docker registry username'
     required: false
