--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,9 @@ inputs:
   password:
     description: 'Docker registry password'
     required: false
+  gitHubOrg:
+    description: 'GitHub organization to push image to (if not current)'
+    required: false
 outputs:
   imageFullName:
     description: 'Full name of the Docker image'
