--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,3 +13,9 @@ jobs:
       - uses: actions/checkout@v1
       - run: npm ci
       - run: npm test
+      - name: Submit Code Climate report
+        uses: paambaati/codeclimate-action@v2.5.56
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageLocations: "coverage/lcov.info:lcov"
