--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
 name: 'Tests'
 
-on:
-  pull_request:
-  push:
-    branches:
-      - master
+on: [push]
+#  pull_request:
+#  push:
+#    branches:
+#      - master
 
 jobs:
   run-tests:
