--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - run: npm ci
-      - run: npm test
-      - name: Submit Code Climate report
+      - name: Run tests & submit coverage report
         uses: paambaati/codeclimate-action@v2.5.6
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
+          coverageCommand: npm test
           coverageLocations: "coverage/lcov.info:lcov"
