Add GitHub Registry support (#12)
* Adds supports for GitHub Docker Registry
* Adds imageName & tag outputs
* Pipe logs for docker build & docker login to GH Actions console
* Update examples in README
* Fixes #9 & #11

--- a/action.yml
+++ b/action.yml
@@ -24,9 +24,16 @@ inputs:
   password:
     description: 'Docker registry password'
     required: false
+  gitHubOrg:
+    description: 'GitHub organization to push image to (if not current)'
+    required: false
 outputs:
   imageFullName:
-    description: 'Full name of the Docker image'
+    description: 'Full name of the Docker image with registry prefix and tag suffix'
+  imageName:
+    description: 'Name of the Docker image with owner prefix'
+  tag:
+    description: 'Tag for the Docker image'
 runs:
   using: 'node12'
   main: 'dist/index.js'
