--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,24 @@
 name: 'Tests'
 
-on:
-  pull_request:
-  push:
-    branches:
-      - master
+on: [push]
+
+#  pull_request:
+#  push:
+#    branches:
+#      - master
 
 jobs:
   run-tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - run: npm ci
-      - run: npm test
+      - name: Check out code
+        uses: actions/checkout@v1
+      - name: Build
+        run: npm ci
+      - name: Run tests & submit coverage report
+        uses: paambaati/codeclimate-action@v2.5.6
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: npm run test
+          coverageLocations: "coverage/lcov.info:lcov"
