--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -29,7 +29,7 @@ jobs:
           - image: docker-build-push/hello-world
             registry: ghcr.io
             username: ${{ github.actor }}
-            password: ${{ secrets.GITHUB_TOKEN }}
+            password: GITHUB_TOKEN
 
 #              image: github-repo/image-name
 #              registry: ghcr.io
