--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -17,32 +17,32 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - image: mrsmithers/hello-world
-            name: Docker Hub
+          - name: Docker Hub
+            image: mrsmithers/hello-world
             registry: docker.io
             username: DOCKERHUB_USERNAME
             password: DOCKERHUB_PASSWORD
 
-          - image: orbital-bank-301021/hello-world
-            name: GCR
+          - name: GCR
+            image: orbital-bank-301021/hello-world
             registry: gcr.io
             username: GCR_USERNAME
             password: GCR_PASSWORD
 
-          - image: hello-world
-            name: ECR
+          - name: ECR
+            image: hello-world
             registry: 026181534292.dkr.ecr.us-west-2.amazonaws.com
 
-          - image: docker-build-push/hello-world
-            name: GHCR Legacy
+          - name: GHCR Legacy
+            image: docker-build-push/hello-world
             registry: docker.pkg.github.com
+            githubOrg: mr-smithers-excellent
             username: GHCR_USERNAME
             password: GITHUB_TOKEN
 
-          - image: hello-world-ghcr
-            name: GHCR
+          - name: GHCR
+            image: hello-world-ghcr
             registry: ghcr.io
-            githubOrg: mr-smithers-excellent
             username: GHCR_USERNAME
             password: GHCR_PASSWORD
 
