--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -44,7 +44,7 @@ jobs:
             image: hello-world-ghcr
             registry: ghcr.io
             username: GHCR_USERNAME
-            password: GITHUB_TOKEN
+            password: GHCR_TOKEN
 
     steps:
       - name: Check out code
