--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -70,9 +70,19 @@ jobs:
           docker pull ${{ steps.docker.outputs.imageFullName }}:${{ github.run_id }}
           docker image inspect ${{ steps.docker.outputs.imageFullName }}:${{ github.run_id }}
 
-#      - name: Raise issue on failure
-#        if: fail()
-#        run:
+      - name: Raise issue on failure
+        if: failure()
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: 'e2e test failure',
+              body: 'https://github.com/mr-smithers-excellent/docker-build-push/runs/'context.github.run_id
+              labels: ['Triage']
+            })
 
       - name: Dump context
         if: always()
