--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: 'Tests'
+name: 'Unit Tests'
 
 on: [push, pull_request]
 
@@ -7,9 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
+
       - name: Build
         run: npm ci
+
       - name: Run tests & submit coverage report
         uses: paambaati/codeclimate-action@v2.7.5
         env:
