--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -21,7 +21,6 @@ jobs:
             registry: docker.io
             username: DOCKERHUB_USERNAME
             password: DOCKERHUB_PASSWORD
-            addLatest: true
             labels: org.opencontainers.image.description="A Hello World image used for e2e tests"
 
           - name: GCR
@@ -29,7 +28,6 @@ jobs:
             registry: gcr.io
             username: GCR_USERNAME
             password: GCR_PASSWORD
-            addLatest: true
             labels: org.opencontainers.image.description="A Hello World image used for e2e tests"
 
           - name: ECR
@@ -59,7 +57,7 @@ jobs:
         with:
           dockerfile: ./e2e/Dockerfile
           image: ${{ matrix.image }}
-#          tags: latest, ${{ github.run_id }}
+          tags: latest, ${{ github.run_id }}
           registry: ${{ matrix.registry }}
           githubOrg: ${{ matrix.githubOrg }}
           username: ${{ secrets[matrix.username] }}
