enable issue creation

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -73,19 +73,19 @@ jobs:
           docker pull ${{ steps.docker.outputs.imageFullName }}:${{ github.run_id }}
           docker image inspect ${{ steps.docker.outputs.imageFullName }}:${{ github.run_id }}
 
-#      - name: Raise issue on failure
-#        if: failure()
-#        uses: actions/github-script@v3
-#        with:
-#          github-token: ${{ secrets.GITHUB_TOKEN }}
-#          script: |
-#            github.issues.create({
-#              owner: context.repo.owner,
-#              repo: context.repo.repo,
-#              title: 'e2e test failure',
-#              body: `Tests failed in run https://github.com/mr-smithers-excellent/docker-build-push/actions/runs/${context.runId}`,
-#              labels: ['Triage']
-#            })
+      - name: Raise issue on failure
+        if: failure()
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: 'e2e test failure',
+              body: `Tests failed in run https://github.com/mr-smithers-excellent/docker-build-push/actions/runs/${context.runId}`,
+              labels: ['Triage']
+            })
 
       - name: Dump context
         if: always()
